--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "chokidar": "^3.6.0",
     "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "ajv": "^8.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
