--- a/package.json
+++ b/package.json
@@ -1,130 +1,153 @@
 {
+  "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "mnemonicforge-raycast",
+  "title": "Mnemonic Forge",
+  "description": "Browse, search, and run prompts from your MnemonicForge library.",
   "version": "0.1.0",
-  "description": "Raycast extension for the MnemonicForge prompt library.",
+  "author": "eliot_eshelman",
   "license": "MIT",
+  "icon": "extension-icon.png",
+  "platforms": ["macOS", "Windows"],
+  "categories": ["Productivity"],
   "scripts": {
-    "dev": "ray dev",
-    "lint": "tsc --noEmit",
-    "build": "ray build"
+    "build": "ray build",
+    "dev": "ray develop",
+    "lint": "ray lint",
+    "lint:fix": "ray lint --fix",
+    "typecheck": "tsc --noEmit"
   },
+  "commands": [
+    {
+      "name": "browse-prompts",
+      "title": "Browse Prompts",
+      "subtitle": "MnemonicForge",
+      "description": "Search your MnemonicForge prompt library.",
+      "mode": "view"
+    },
+    {
+      "name": "run-prompt",
+      "title": "Run Prompt",
+      "subtitle": "MnemonicForge",
+      "description": "Fill parameters and generate a prompt output.",
+      "mode": "view"
+    }
+  ],
+  "preferences": [
+    {
+      "name": "promptsPath",
+      "title": "Prompts Folder",
+      "description": "Absolute path to your prompt_templates directory (e.g., /Users/you/.../prompt_templates).",
+      "type": "textfield",
+      "placeholder": "/Users/you/Projects/MnemonicForge/prompt_templates",
+      "required": true,
+      "label": "Prompts Folder"
+    },
+    {
+      "name": "pasteAfterCopy",
+      "title": "Paste After Copy",
+      "description": "Automatically paste rendered output after it is copied.",
+      "type": "checkbox",
+      "default": true,
+      "label": "Paste After Copy",
+      "required": false
+    },
+    {
+      "name": "enableSend",
+      "title": "Enable OpenAI Send",
+      "description": "Allow prompts to be sent directly to OpenAI when ⌘↵ is pressed.",
+      "type": "checkbox",
+      "default": false,
+      "label": "Enable OpenAI Send",
+      "required": false
+    },
+    {
+      "name": "openaiModel",
+      "title": "Default OpenAI Model",
+      "description": "Model name used when sending prompts (overridden by prompt metadata).",
+      "type": "textfield",
+      "placeholder": "gpt-4.1-mini",
+      "label": "Default OpenAI Model",
+      "required": false
+    },
+    {
+      "name": "openaiTemperature",
+      "title": "Default Temperature",
+      "description": "Temperature value used for OpenAI sends when not specified in a prompt.",
+      "type": "textfield",
+      "placeholder": "0.2",
+      "label": "Default Temperature",
+      "required": false
+    },
+    {
+      "name": "openaiMaxTokens",
+      "title": "Default Max Tokens",
+      "description": "Maximum tokens requested from OpenAI when not set in a prompt.",
+      "type": "textfield",
+      "placeholder": "1024",
+      "label": "Default Max Tokens",
+      "required": false
+    },
+    {
+      "name": "contextDefaultClipboard",
+      "title": "Capture Clipboard by Default",
+      "description": "Include current clipboard text in the contextual data sent to prompts.",
+      "type": "checkbox",
+      "default": false,
+      "label": "Capture Clipboard",
+      "required": false
+    },
+    {
+      "name": "contextDefaultSelection",
+      "title": "Capture Selected Text by Default",
+      "description": "Automatically capture the current text selection as context.",
+      "type": "checkbox",
+      "default": false,
+      "label": "Capture Selected Text",
+      "required": false
+    },
+    {
+      "name": "contextDefaultApp",
+      "title": "Capture Frontmost App by Default",
+      "description": "Include the name and bundle ID of the active application in context.",
+      "type": "checkbox",
+      "default": false,
+      "label": "Capture Frontmost App",
+      "required": false
+    },
+    {
+      "name": "contextDefaultDate",
+      "title": "Capture Current Date by Default",
+      "description": "Add the current ISO8601 timestamp to the prompt context.",
+      "type": "checkbox",
+      "default": false,
+      "label": "Capture Current Date",
+      "required": false
+    },
+    {
+      "name": "debugLog",
+      "title": "Enable Debug Logging",
+      "description": "Emit verbose logs to Raycast console for troubleshooting.",
+      "type": "checkbox",
+      "default": false,
+      "label": "Enable Debug Logging",
+      "required": false
+    }
+  ],
   "dependencies": {
-    "@raycast/api": "^1.77.0",
-    "@raycast/utils": "^1.12.5",
+    "@raycast/api": "^1.103.2",
+    "@raycast/utils": "^1.17.0",
+    "ajv": "^8.12.0",
     "chokidar": "^3.6.0",
     "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
-    "handlebars": "^4.7.8",
-    "ajv": "^8.12.0"
+    "handlebars": "^4.7.8"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "typescript": "^5.3.3"
-  },
-  "raycast": {
-    "schemaVersion": 1,
-    "title": "MnemonicForge",
-    "description": "Browse, parameterize, and run prompts from your MnemonicForge library.",
-    "icon": "assets/icon.png",
-    "author": "MnemonicForge Team",
-    "categories": [
-      "productivity"
-    ],
-    "commands": [
-      {
-        "name": "browse-prompts",
-        "title": "Browse Prompts",
-        "subtitle": "MnemonicForge",
-        "description": "Search your MnemonicForge prompt library.",
-        "mode": "view"
-      },
-      {
-        "name": "run-prompt",
-        "title": "Run Prompt",
-        "subtitle": "MnemonicForge",
-        "description": "Fill parameters and generate a prompt output.",
-        "mode": "view"
-      }
-    ],
-    "preferences": [
-      {
-        "name": "promptsPath",
-        "title": "Prompts Folder",
-        "description": "Absolute path to your prompt_templates directory (e.g., /Users/you/.../prompt_templates).",
-        "type": "textfield",
-        "placeholder": "/Users/you/Projects/MnemonicForge/prompt_templates",
-        "required": true
-      },
-      {
-        "name": "pasteAfterCopy",
-        "title": "Paste After Copy",
-        "description": "Automatically paste rendered output after it is copied.",
-        "type": "checkbox",
-        "default": true
-      },
-      {
-        "name": "enableSend",
-        "title": "Enable OpenAI Send",
-        "description": "Allow prompts to be sent directly to OpenAI when ⌘↵ is pressed.",
-        "type": "checkbox",
-        "default": false
-      },
-      {
-        "name": "openaiModel",
-        "title": "Default OpenAI Model",
-        "description": "Model name used when sending prompts (overridden by prompt metadata).",
-        "type": "textfield",
-        "placeholder": "gpt-4.1-mini"
-      },
-      {
-        "name": "openaiTemperature",
-        "title": "Default Temperature",
-        "description": "Temperature value used for OpenAI sends when not specified in a prompt.",
-        "type": "textfield",
-        "placeholder": "0.2"
-      },
-      {
-        "name": "openaiMaxTokens",
-        "title": "Default Max Tokens",
-        "description": "Maximum tokens requested from OpenAI when not set in a prompt.",
-        "type": "textfield",
-        "placeholder": "1024"
-      },
-      {
-        "name": "contextDefaultClipboard",
-        "title": "Capture Clipboard by Default",
-        "description": "Include current clipboard text in the contextual data sent to prompts.",
-        "type": "checkbox",
-        "default": false
-      },
-      {
-        "name": "contextDefaultSelection",
-        "title": "Capture Selected Text by Default",
-        "description": "Automatically capture the current text selection as context.",
-        "type": "checkbox",
-        "default": false
-      },
-      {
-        "name": "contextDefaultApp",
-        "title": "Capture Frontmost App by Default",
-        "description": "Include the name and bundle ID of the active application in context.",
-        "type": "checkbox",
-        "default": false
-      },
-      {
-        "name": "contextDefaultDate",
-        "title": "Capture Current Date by Default",
-        "description": "Add the current ISO8601 timestamp to the prompt context.",
-        "type": "checkbox",
-        "default": false
-      },
-      {
-        "name": "debugLog",
-        "title": "Enable Debug Logging",
-        "description": "Emit verbose logs to Raycast console for troubleshooting.",
-        "type": "checkbox",
-        "default": false
-      }
-    ]
+    "@raycast/eslint-config": "^2.0.4",
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
+    "eslint": "^9.22.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   }
 }
